fixed pins and horizontal scroll bar

--- a/styles/homestyle.css
+++ b/styles/homestyle.css
@@ -37,7 +37,13 @@ img {
 }
 body{
     background: var(--charcoal);
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+main {
+    width: 100%;
+    max-width: 100%;
 }
 
 /* title */
@@ -82,13 +88,22 @@ nav a:hover{
     grid-template-rows: repeat(31, 1fr);
     width: 100%;
     height: 100vw;
+    max-width: 100%;
 }
 .home-map {
+/*Display stuff*/
     grid-column: 1/31;
     grid-row: 1/32;
-    width: 100%;
-    filter: invert(90%);
+/*Positioning stuff*/
     z-index: -1;
+/*Box model stuff*/
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+/*Manipulations stuff*/
+    filter: invert(90%);
+/*Miscellaneous*/
+    object-fit: cover;
 }
 .home-logo {
     grid-column: 1/31;
@@ -96,27 +111,41 @@ nav a:hover{
     width: 150px;
     border: var(--cream) solid 2px;
 }
+/* pins */
 .pins {
     z-index: 1;
+    max-width: 100vw;
+}
+.pins:hover {
+    filter:invert(25%);
+}
+.pin1 { 
+    /* rexburg housing */
+    width: 100%;
+    /* filter:invert(100%); */
+    grid-column: 15/16;
+    grid-row: 12/13;
 }
 .pin2 {
-    width: 15px;
-    filter:invert(100%);
-    grid-column: 10/15;
-    grid-row: 14/20;
-    display: block;
+    /* on campus east of hart building */
+    width: 100%;
+    /* filter:invert(75%); */
+    grid-column: 19/20;
+    grid-row: 13/14;
 }
 .pin3 {
-    width: 15px;
-    grid-column: 10/15;
-    grid-row: 14/20;
-    display: block;
+    /* next to the bank by little ceasers */
+    width: 100%;
+    /* filter:invert(100%); */
+    grid-column: 18/19;
+    grid-row: 9/10;
 }
 .pin4 {
-    width: 15px;
-    grid-column: 10/15;
-    grid-row: 14/20;
-    display: block;
+    /* behind ross */
+    width: 100%;
+    /* filter:invert(25%); */
+    grid-column: 22/23;
+    grid-row: 1/2;
 }
 
 /* footer */
